force-app/main/default/objects/LLC_BI__Credit_Memo_Screen__c/LLC_BI__Credit_Memo_Screen__c.object-meta.xml
<CustomObject>
    <description>The Credit Memo Screen object stores information related to the creation and management of a Credit Memo&apos;s set of templates.</description>
    <label>Credit Memo Screen</label>
    <nameField>
        <label>Credit Memo Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>