force-app/main/default/objects/LLC_BI__Credit_Memo_Screen__c/fields/LLC_BI__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This required lookup field automatically populates and is used to specify the Credit Memo record that is associated with the Credit Memo template.</description>
    <label>Credit Memo</label>
    <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
    <relationshipLabel>Credit Memo Screens</relationshipLabel>
    <relationshipName>Credit_Memo_Screens</relationshipName>
    <type>Lookup</type>
</CustomField>