force-app/main/default/objects/LLC_BI__Credit_Memo_Screen__c/fields/LLC_BI__Template_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template_ID__c</fullName>
    <description>This required text field automatically populates and provides the Credit Memo template a unique identifier.</description>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>